--- a/public/style.css
+++ b/public/style.css
@@ -44,9 +44,10 @@ a {
     z-index: 5;
 }
 #ui section {
+    position: relative;
     padding: 1.5rem;
     width: 30vw;
-    max-height: 60vh;
+    height: auto;
     background-color: white;
     border-radius: 1.5rem;
     z-index: 10;
@@ -56,18 +57,26 @@ a {
 }
 #users-connected,
 #chat-lobby {
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+#menu-content {
+    display: flex;
+    justify-content: space-between;
+    width: 80vw;
+    height: 80vh;
 }
 
 /* Menu */
 
 #menu {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 .5rem 0 .5rem;
     height: auto;
-    margin: 0 2rem 0 2rem;
     z-index: 50;
 }
 
@@ -89,6 +98,8 @@ a {
 
 #fill-text {
     display: flex;
+    position: absolute;
+    bottom: 0;
 }
 #list-posts {
     display: flex;
