--- a/public/style.css
+++ b/public/style.css
@@ -47,7 +47,6 @@ a {
     position: relative;
     padding: 1.5rem;
     width: 30vw;
-    height: auto;
     background-color: white;
     border-radius: 1.5rem;
     z-index: 10;
@@ -59,6 +58,7 @@ a {
 #chat-lobby {
     overflow-y: auto;
     overflow-x: hidden;
+    height: 100%;
 }
 #menu-content {
     display: flex;
@@ -76,8 +76,7 @@ a {
     align-items: center;
     justify-content: center;
     margin: 0 .5rem 0 .5rem;
-    height: auto;
-    z-index: 50;
+    height: 25%;
 }
 
 /* Username */
