--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,12 @@ textarea {
     border-radius: 2rem;
     background-color: #fff;
 }
+.section-content div {
+    margin-bottom: 1rem;
+}
+.section-content div:last-child {
+    margin-bottom: 0;
+}
 #list-posts,
 #list-users {
     padding: 1rem;
@@ -72,17 +78,17 @@ textarea {
 
 #users-connected {
     width: 20%;
-    min-width: 17.2rem;
+    min-width: 17.5rem;
 }
 #list-users {
-    height: 90%;
+    height: 87%;
 }
 .user-state {
     position: relative;
     margin-left: auto;
-    width: 1rem;
-    height: 1rem;
-    transform: translateY(.5rem) rotate(45deg);
+    width: .7rem;
+    height: .7rem;
+    transform: translateY(.8rem) rotate(45deg);
     background-color: #00a023;
 }
 .user-state.user-playing {
@@ -97,9 +103,6 @@ textarea {
     margin: 0 1% 0 1%;
     flex-direction: column;
     height: max-content;
-}
-#menu div {
-    margin-bottom: .7rem;
 }
 #username {
     display: flex;
@@ -119,18 +122,25 @@ textarea {
     min-width: 35rem;
 }
 #list-posts {
-    height: 85%;
+    height: 83%;
 }
 #fill-text {
     display: flex;
     width: 100%;
-    margin-top: .7rem;
     height: auto;
 }
 #body-post {
     width: 80%;
+    height: auto;
+    padding: .3rem;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, .2);
 }
 #send-post {
     width: 20%;
+}
+.posts.this-post {
+    justify-content: right;
+}
+.posts.info {
+    justify-content: center;
 }
