--- a/public/style.css
+++ b/public/style.css
@@ -247,12 +247,17 @@ textarea {
     z-index: 15;
 }
 #content-chat-close {
+    position: absolute;
+    bottom: 0;
+    right: 0;
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 5rem;
     height: 5rem;
-    transform: translateY(.5rem);
     justify-content: center;
     background-color: #fff;
+    border-radius: .3rem;
 }
 #content-chat-close p {
     font-size: 3rem;
@@ -262,6 +267,12 @@ textarea {
     max-width: 30rem;
     height: auto;
     max-height: 35rem;
-    background-color: #fff;
+    margin-right: 5.5rem;
     box-shadow: inset 0 0 1rem rgba(0, 0, 0, .2);
+}
+.preview-posts {
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: .3rem;
+    margin-top: 1rem;
 }
