--- a/public/style.css
+++ b/public/style.css
@@ -242,6 +242,12 @@ textarea {
 
 /* RENDERER-GAME - CANVAS */
 
+#canvas {
+    background-color: #fff;
+}
+
+/* RENDERER-GAME - CHAT */
+
 #chat.game {
     position: absolute;
     bottom: 1rem;
@@ -250,10 +256,8 @@ textarea {
     min-width: 30rem;
     height: 40%;
     min-height: 35rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .2);
 }
-
-/* RENDERER-GAME - CHAT */
-
 #chat-close {
     display: none;
     position: absolute;
@@ -276,6 +280,7 @@ textarea {
     justify-content: center;
     background-color: #fff;
     border-radius: .3rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .2);
 }
 #content-bt-open-chat {
     font-size: 3rem;
@@ -330,6 +335,7 @@ textarea {
     padding: 1rem;
     font-size: 1.3rem;
     transform: translateY(-6.5rem);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .2);
 }
 #chat.game #chat-game-info {
     display: block;
